--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+network-manager-openconnect (1.2.8.1-3) unstable; urgency=medium
+
+  * add patch
+
+ -- donghualin <donghualin@uniontech.com>  Thu, 23 Jun 2022 17:06:15 +0800
+
 network-manager-openconnect (1.2.8-3) unstable; urgency=medium
 
   * Bump Standards-Version to 4.6.1, no changes
