fix(auth-dialog): 隐藏默认的认证窗口
auth-dialog会显示窗口，产品希望不显示该窗口

Log: 修复连接openconnect的VPN时弹英文窗口的问题
Influence: 无
Bug: https://pms.uniontech.com/zentao/bug-view-63126.html
Change-Id: I851c41d4cdbd9b3d4985d5553cd216d62b386f00

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+network-manager-openconnect (1.2.4.1-4+dde) UNRELEASED; urgency=medium
+
+  * deepin-bug-63126-hide-auth-dialog
+
+ -- lvpeilong <lvpeilong@uniontech.com>  Thu, 21 Jul 2022 17:23:10 +0800
+
 network-manager-openconnect (1.2.4-4) unstable; urgency=medium
 
   * Add myself to Uploaders.
