--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+network-manager-openconnect (1.2.4.1-5+dde) UNRELEASED; urgency=medium
+
+  * update
+
+ -- Mike Miller <mtmiller@debian.org>  Mon, 25 Jul 2022 13:44:06 +0800
+
 network-manager-openconnect (1.2.4.1-5+dde) unstable; urgency=medium
 
   [ lvpeilong ]
