--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-network-manager-openconnect (1.2.4.1-5+dde) UNRELEASED; urgency=medium
+network-manager-openconnect (1.2.8.1-4+dde) unstable; urgency=medium
 
+  [ Mike Miller ]
   * update
 
- -- Mike Miller <mtmiller@debian.org>  Mon, 25 Jul 2022 13:44:06 +0800
+  [ TagBuilder ]
+  * fix: 同步社区版本(Task: 228909)(Influence: 无)
+
+ -- zhaoyingzhen <zhaoyingzhen@uniontech.com>  Fri, 16 Dec 2022 16:26:42 +0800
 
 network-manager-openconnect (1.2.4.1-5+dde) unstable; urgency=medium
 
